# red_blue

./: .gitignore  LICENSE  README.md  config.example.yaml  config.huggingface.example.yaml  config.local-transformers.example.yaml  config.tatu.seval.sample100.yaml  pyproject.toml  requirements.txt
data/: seeds.jsonl
src/red_blue_platform/: __init__.py  blue_memory.py  blue_team.py  cli.py  config.py  datasets.py  db.py  evaluation.py  io.py  llm.py  red_team.py  schema.py  seed_generation.py
src/red_blue_platform/agents/: __init__.py  base.py  react.py  runtime.py  tools.py
tests/: test_pipeline.py
