[project]
name = "red-blue-platform"
version = "0.1.0"
description = "Portable red/blue/eval data pipeline for LLM safety evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Red Blue Platform Contributors"},
]
dependencies = [
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
datasets = [
  "datasets>=2.19.0",
]
local-models = [
  "torch",
  "transformers>=4.40.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
rb-platform = "red_blue_platform.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
